# mirage

./: CMakeLists.txt  README.md  armor.c  armor.h  command_processing.c  command_processing.h  config-720p.json  config.json  config_manager.c  config_manager.h  config_parser.c  config_parser.h  cuda_color_correction.cu  cuda_color_correction.h  curl_download.c  curl_download.h  defines.h  detect.cpp  detect.h  devices.c  devices.h  element_renderer.c  element_renderer.h  environmental_element.c  environmental_element.h  fan_monitoring.c  fan_monitoring.h  hud_manager.c  hud_manager.h  mirage.c  mirage.h  mosquitto_comms.c  recording.c  recording.h  screenshot.c  screenshot.h  system_metrics.c  system_metrics.h
tools/: scale_config.py  scale_frames.py
ui_assets/mk2-720p/: IronMan-UI-Altitude-Animated-1.json  IronMan-UI-Batt-Animated.json  IronMan-UI-Heading-Animated-1.json  IronMan-UI-Pedestal-Animated-V2.json  IronMan-UI-Pitch-Animated-1.json  IronMan-UI-Sign-Animated.json
